[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-tls = "0.5.0"

[dependencies.tokio]
version = "1.21.0"
features = ["full"]

[dependencies.hyper]
version = "0.14.20"
features = ["server", "http1", "tcp", "client"]

[dependencies.clap]
version = "3.2.20"
feeatures = ["cargo"]
